--- a/src/Components/Header/style.css
+++ b/src/Components/Header/style.css
@@ -3,9 +3,10 @@
   padding: 1px !important;
 }
 
+
 .menuButton {
   margin-right: 400px !important;
-  /* margin-left: 240px !important; */
+
 }
 .menuButton.shifted {
   margin-left: 240px !important;
@@ -33,20 +34,12 @@
 .searchIcon.mobile-only {
   display: none;
 }
-/* .desktop-only {
-    display: flex;
-   
-} */
+
 .h1mobile-only{
   display: none;
 }
 
-/* .searchIcon {
-  padding: 0 16px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-} */
+
 
 .inputRoot {
   color: inherit;
@@ -55,7 +48,7 @@
 
 .inputInput {
   padding: 8px 8px 8px 0 !important;
-  /* padding-left: calc(1em + 32px) !important; */
+
   transition: width 0.3s !important;
   width: 80%;
 }
@@ -68,19 +61,14 @@
   align-items: center;
 }
 
-/* @media (min-width: 600px) {
-  .css-hyum1k-MuiToolbar-root {
-      padding-left: 254px !important;
-      padding-right: 24px;
-  }
-} */
+
 @media (max-width: 430px) {
   .css-hyum1k-MuiToolbar-root {
-      /* Adjustments for smaller screens */
+
       padding-left: 0px !important;
       padding-right: 0px !important;
-      min-height: 48px !important; /* or any other value that suits your design */
-      /* Add other adjustments here if needed */
+      min-height: 48px !important;
+     
   }
   .search {
 
@@ -88,8 +76,7 @@
     margin-right: 0px;
   }
   .avatar {
-    /* background-color: #fff; */
-    /* color: #1976d2; */
+
     margin-left: 0px;
     margin-right: 0px;
 }
@@ -118,7 +105,7 @@
 .logoutIcon{
   display: none !important;
 }
-/* Show search bar when the search icon is clicked */
+
 .searchOpen .search {
   display: flex;
 }
