--- a/src/Components/Login/Style.css
+++ b/src/Components/Login/Style.css
@@ -1,130 +1,240 @@
-/* Style.css */
-body {
+
+.body-login {
     margin: 0;
-    padding: 0;
+    padding-right: 10%;
     font-family: Arial, sans-serif;
     background-color: #00408e;
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
-  }
-  
-  .container {
+}
+
+.container {
     display: flex;
-    width: 140%;
+    width: 130%;
     max-width: 1200px;
     height: 80%;
     border-radius: 10px;
     overflow: hidden;
-    background-color: #fff; /* Ensures both sides have a white background */
-  }
-  
-  .left-side {
+    background-color: #fff; 
+}
+.remember-me{
+    display: flex;
+    align-items: center;
+    padding-top: 8%;
+}
+.remember {
     
-    margin-left: 3%;
-    margin-right: 2%;
+    margin-top: 0% !important;
+}
+
+input[type="checkbox"] {
+    margin: 5px;
+    border: 1px solid #ccc;
+    border-radius: 0;
+    width: 16px !important;
+    height: 16px;
+}
+
+.left-side {
     flex: 1;
-    /* padding: 20px; */
     display: flex;
     flex-direction: column;
     justify-content: center;
-  }
-  
-  .left-side h1 {
+}
+
+.container h1 {
     margin-bottom: 15%;
+    margin-left: 5%;
     color: #0236c4;
-  }
-  
-  .left-side form {
+}
+
+.left-side form {
     display: flex;
     flex-direction: column;
-  }
-  
-  .left-side label {
-    margin-top: 8%;
+}
+
+.left-side label {
+    margin-top: 6%;
     font-weight: bold;
-  }
-  
-  .left-side input {
+}
+
+.left-side input {
     padding: 10px;
     margin-top: 5px;
     border: 1px solid #ccc;
     border-radius: 5px;
-    width: 57%;
-  }
-  .left-side .google-btn {
-    background-color: #db4437;
-    display: flex;
-    font-size: 1.2em; 
-    /* color: #db4437; */
-    width: 10%;
-    align-items: center;
-    justify-content: center;
-    margin-left: 20%;
-    gap: 10px; /* Space between icon and text */
-  }
-  
-  .left-side button {
-    margin-top: 10px;
-    width: 60%;
-    padding: 10px;
+    width: 88%;
+}
+
+.social-login .google-btn {
+    background-color: #ffffff;
+}
+
+.google-icon {
+    width: 40px;
+    height: 40px;
+    fill: none;
+}
+
+.left-side button {
+    margin-top: 55px;
+    width: 95%;
+    padding: 15px;
     border: none;
     border-radius: 5px;
-    background-color: #011754;
+    background-color: rgb(0, 40, 87);
     color: #fff;
     cursor: pointer;
-  }
-  
-  .left-side .google-btn {
-    background-color: #db4437;
-  }
-  
-  .left-side button:hover {
+    font-size: 15px;
+}
+
+.left-side button:hover {
     opacity: 0.9;
-  }
-  
-  /* .left-side p {
-    margin-top: 10px;
-  } */
-  
-  .left-side a {
-    color: #007bff;
-    text-decoration: none;
-  }
-  
-  .left-side a:hover {
+}
+
+.left-side a:hover {
     text-decoration: underline;
-  }
-  
-  .right-side {
+}
+
+.right-side {
     flex: 1;
     display: flex;
     align-items: center;
     justify-content: center;
-    /* Ensure the SVG or image fits the container */
-  }
-  
-  .background-image {
+}
+
+.background-image {
     width: 100%;
     height: 100%;
     object-fit: cover;
-  }
-  .forget{
-    
-    padding-left: 25%;
-  }
-  .password{
+}
+
+.forget {
+    font-size: 14px;
+    text-decoration: none;
+    color: #00408e;
+    font-weight: bold;
+    padding-left: 39%;
+}
+
+.password {
     padding-top: 6%;
-  }
-  .signup{
+}
+
+.signup {
     font-size: 90%;
     padding-top: 3%;
     font-weight: bold;
     padding-left: 60px;
-  }
-  .continue{
-    padding-left: 65px;
-    padding-top: 5%;
+}
+
+.signup-btn {
+    color: #00408e;
+    text-decoration: none;
+}
+
+.continue {
+    font-size: 14px;
+    font-weight: bold;
     color: rgb(148, 148, 148);
-  }
+}
+
+.form {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.social-login {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-right: 10%;
+}
+
+
+
+
+@media (max-width: 430px) {
+    .left-side h1 {
+        margin-bottom: 7%;
+    }
+    .right-side{
+        display: none;
+    }
+    .left-side .email{
+        padding-top: 10%;
+        padding-bottom: 3%;
+        font-size: 18px;
+    }
+    .left-side .password{
+        padding-top: 10%;
+        font-size: 18px;
+    }
+    .body-login{
+        background-color: #fff ;
+        padding-right: 1% ;
+    }
+    .left-side input {
+        width: 93.5%;
+        border-radius: 10px;
+        padding: 15px;
+    }
+    .left-side{
+        padding-bottom: 30%;
+    }
+    .left-side .remember {
+        margin-top: 0%;
+        margin-left: 2%;
+    }
+    .remember-me{
+        padding-top: 8%;
+        font-size: 1rem;
+    }
+
+    .left-side button {
+        width: 100%;
+        padding: 17px;
+        border-radius: 15px;
+        font-size: 18px;
+        font-weight: bold;
+    }
+
+    .social-login .google-btn {
+        width: 100%;
+        margin-top: 30px;
+        font-size: 60px;
+    }
+    .signup { 
+        font-size: 16px;
+        font-weight: bold;
+    }
+
+    .container {
+        width: 100%;
+        height: auto;
+       
+    }
+    .left-side button:hover {
+        opacity: 6.9;
+    }
+
+    .form {
+        margin: 0;
+        padding: 10px;
+    }
+    .forget{
+        padding-left: 45%;
+        font-size: 15px;
+        
+    }
+    input[type="checkbox"] {
+        margin: 7px !important;
+        width: 16px !important;
+        height: 16px !important;
+    }
+  
+}
