--- a/src/Components/Header/style.css
+++ b/src/Components/Header/style.css
@@ -1,6 +1,7 @@
 .header {
   background-color: rgba(35, 35, 93, 0.978) !important; /* Primary color */
-  padding: 1px !important;
+  padding-right: 1px !important;
+  
 }
 
 
