--- a/src/Components/SideBar/style.css
+++ b/src/Components/SideBar/style.css
@@ -1,5 +1,6 @@
 /* Sidebar styles */
 .sidebar {
+  
   width: 250px;
   font-family: 'Copperplate', serif; /* Applied Copperplate font */
   position: fixed; /* Fixed positioning for sidebar */
@@ -14,6 +15,7 @@
 
 .sidebar.open {
   left: 0; /* Show sidebar when open */
+  padding-right: 7%;
 }
 
 .sidebarHeader {
